--- a/libs/react-native/tsconfig.json
+++ b/libs/react-native/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "index.ts"],
+  "include": ["src", "index.ts", "sdk.ts"],
   "compilerOptions": {
     "tsBuildInfoFile": ".tsbuildinfo",
     "jsx": "react-native"
