--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -1,32 +1,12 @@
 {
   "name": "@getoptimal/react-native",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./index.ts",
-      "require": "./index.ts",
-      "types": "./index.ts"
-    },
-    "./sdk": {
-      "import": "./sdk.ts",
-      "require": "./sdk.ts",
-      "types": "./sdk.ts"
-    }
-  },
+  "main": "./index.ts",
+  "types": "./index.ts",
   "publishConfig": {
-    "exports": {
-      ".": {
-        "import": "./dist/index.js",
-        "require": "./dist/index.js",
-        "types": "./dist/index.d.ts"
-      },
-      "./sdk": {
-        "import": "./dist/sdk.js",
-        "require": "./dist/sdk.js",
-        "types": "./dist/sdk.d.ts"
-      }
-    }
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts"
   },
   "files": [
     "dist"
@@ -56,7 +36,7 @@
     "@tanstack/react-query": "^4.29.5"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "^0.1.2",
+    "@getoptimal/eslint-config": "^0.1.3",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
     "eslint": "^8.38.0",
