--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
     "eslint": "^8.38.0",
+    "react-native": ">=0.71.6",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   }
