--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.8",
   "main": "index.js",
   "dependencies": {
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/eslint": "^8.37.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
