--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@changesets/cli": "^2.26.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@manypkg/cli": "^0.20.0",
-    "@getoptimal/eslint-config": "^0.1.0",
+    "@getoptimal/eslint-config": "workspace:*",
     "@types/prettier": "^2.7.2",
     "eslint": "^8.38.0",
     "prettier": "^2.8.7",
