--- a/libs/js-sdk/package.json
+++ b/libs/js-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/js-sdk",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "./index.ts",
   "types": "./index.ts",
   "type": "module",
@@ -31,7 +31,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "^0.2.0",
+    "@getoptimal/eslint-config": "workspace:*",
     "eslint": "^8.38.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
