--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react-native",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -9,7 +9,8 @@
     "types": "dist/index.d.ts"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
@@ -36,7 +37,7 @@
     "@tanstack/react-query": "^4.29.5"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "^0.2.0",
+    "@getoptimal/eslint-config": "workspace:*",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
     "eslint": "^8.38.0",
