--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@getoptimal/js-sdk": "workspace:*",
     "@react-native-community/netinfo": "^9.3.9",
-    "@tanstack/react-query": "^4.29.5"
+    "@tanstack/react-query": "^4.29.5",
+    "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
     "@getoptimal/eslint-config": "workspace:*",
