--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react-native",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "type": "module",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@getoptimal/js-sdk": "workspace:*",
+    "@getoptimal/react-helpers": "workspace:*",
     "@react-native-community/netinfo": "^9.3.9",
     "@tanstack/react-query": "^4.29.5",
     "react-native-url-polyfill": "^1.3.0"
