--- a/libs/react-helpers/package.json
+++ b/libs/react-helpers/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "publishConfig": {
     "main": "dist/index.js",
-    "types": "dist/index.d.ts"
+    "types": "dist/index.d.ts",
+    "access": "public"
   },
   "files": [
     "dist"
