--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "clean:workspaces": "turbo clean",
     "dev": "turbo dev --parallel",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
-    "lint": "turbo lint",
+    "lint": "turbo lint && manypkg check",
     "lint:fix": "turbo lint:fix",
     "type-check": "turbo type-check"
   },
   "dependencies": {
     "@changesets/cli": "^2.26.1",
-    "@getoptimal/eslint-config": "workspace:*",
+    "@getoptimal/eslint-config": "*",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@manypkg/cli": "^0.20.0",
     "@types/prettier": "^2.7.2",
