--- a/libs/react-helpers/package.json
+++ b/libs/react-helpers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react-helpers",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "main": "./index.ts",
   "types": "./index.ts",
   "type": "module",
@@ -29,17 +29,17 @@
     "clean": true
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.5",
-    "@getoptimal/js-sdk": "workspace:*"
+    "@getoptimal/js-sdk": "*",
+    "@tanstack/react-query": "^4.29.5"
   },
   "peerDependencies": {
     "react": ">=16"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "workspace:*",
+    "@getoptimal/eslint-config": "*",
     "eslint": "^8.38.0",
+    "react": "18.2.0",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4",
-    "react": ">=16"
+    "typescript": "^5.0.4"
   }
 }
