--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@getoptimal/eslint-config",
   "private": true,
-  "version": "0.3.4",
+  "version": "0.3.5",
   "main": "index.js",
   "dependencies": {
+    "@next/eslint-plugin-next": "^13.4.2",
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/eslint": "^8.37.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
