--- a/libs/react-helpers/package.json
+++ b/libs/react-helpers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react-helpers",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "main": "./index.ts",
   "types": "./index.ts",
   "type": "module",
@@ -29,14 +29,14 @@
     "clean": true
   },
   "dependencies": {
-    "@getoptimal/js-sdk": "*",
+    "@getoptimal/js-sdk": "0.3.6",
     "@tanstack/react-query": "^4.29.5"
   },
   "peerDependencies": {
     "react": ">=16"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "*",
+    "@getoptimal/eslint-config": "0.3.6",
     "eslint": "^8.38.0",
     "react": "18.2.0",
     "tsup": "^6.7.0",
