--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react-native",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "type": "module",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -32,14 +32,14 @@
     "react-native": ">=0.71.6"
   },
   "dependencies": {
-    "@getoptimal/js-sdk": "*",
-    "@getoptimal/react-helpers": "*",
+    "@getoptimal/js-sdk": "0.3.6",
+    "@getoptimal/react-helpers": "0.3.6",
     "@react-native-community/netinfo": "^9.3.9",
     "@tanstack/react-query": "^4.29.5",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "*",
+    "@getoptimal/eslint-config": "0.3.6",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
     "eslint": "^8.38.0",
