--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "main": "./index.ts",
   "types": "./index.ts",
   "type": "module",
@@ -29,8 +29,8 @@
     "clean": true
   },
   "dependencies": {
-    "@getoptimal/js-sdk": "*",
-    "@getoptimal/react-helpers": "*",
+    "@getoptimal/js-sdk": "0.3.6",
+    "@getoptimal/react-helpers": "0.3.6",
     "@tanstack/react-query": "^4.29.5",
     "react-intersection-observer": "^9.4.3"
   },
@@ -39,7 +39,7 @@
     "react-dom": ">=16"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "*",
+    "@getoptimal/eslint-config": "0.3.6",
     "eslint": "^8.38.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
