--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@getoptimal/eslint-config",
   "private": true,
-  "version": "0.3.5",
+  "version": "0.3.6",
   "main": "index.js",
   "dependencies": {
-    "@next/eslint-plugin-next": "^13.4.2",
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/eslint": "^8.37.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "eslint-config-next": "^13.4.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "^1.9.3",
     "eslint-plugin-react": "7.32.2"
