--- a/libs/react/tsconfig.json
+++ b/libs/react/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "include": ["src", "index.ts"],
   "compilerOptions": {
+    "jsx": "react-jsx",
     "tsBuildInfoFile": ".tsbuildinfo"
   }
 }
