--- a/libs/react/package.json
+++ b/libs/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "main": "./index.ts",
   "types": "./index.ts",
   "type": "module",
@@ -29,9 +29,10 @@
     "clean": true
   },
   "dependencies": {
-    "@getoptimal/js-sdk": "0.3.7",
-    "@getoptimal/react-helpers": "0.3.7",
+    "@getoptimal/js-sdk": "0.3.8",
+    "@getoptimal/react-helpers": "0.3.8",
     "@tanstack/react-query": "^4.29.5",
+    "react-image": "^4.1.0",
     "react-intersection-observer": "^9.4.3"
   },
   "peerDependencies": {
@@ -39,7 +40,7 @@
     "react-dom": ">=16"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "0.3.7",
+    "@getoptimal/eslint-config": "0.3.8",
     "eslint": "^8.38.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
