--- a/libs/react-native/package.json
+++ b/libs/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getoptimal/react-native",
-  "version": "0.3.12",
+  "version": "0.3.13",
   "type": "module",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -26,25 +26,26 @@
     "dts": true,
     "splitting": true,
     "sourcemap": true,
-    "clean": true
+    "clean": true,
+    "treeshake": false
   },
   "peerDependencies": {
     "react-native": ">=0.66.2"
   },
   "dependencies": {
-    "@getoptimal/js-sdk": "0.3.12",
-    "@getoptimal/react-helpers": "0.3.12",
+    "@getoptimal/js-sdk": "0.3.13",
+    "@getoptimal/react-helpers": "0.3.13",
     "@react-native-community/netinfo": "^9.4.1",
     "@tanstack/react-query": "^4.29.5",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
-    "@getoptimal/eslint-config": "0.3.12",
+    "@getoptimal/eslint-config": "0.3.13",
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
     "eslint": "^8.38.0",
     "react-native": "0.71.7",
-    "tsup": "^6.7.0",
+    "tsup": "^7.2.0",
     "typescript": "^5.0.4"
   }
 }
